[tool.poetry]
name = "ordering-ptr-ensemble"
version = "0.1.0"
description = "An implementation of the Ordering Pointer Network Ensemble for senetence ordering."
authors = ["Shawon Ashraf"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
pandas = "^2.2.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.4"
einops = "^0.8.0"
transformers = "^4.40.2"
lightning = "^2.2.4"
accelerate = "^0.30.1"
datasets = "^2.19.1"
wandb = "^0.17.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
